Getting deployment ready

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=gmdb-gateway-svc
-server.port=8180
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+server.port=8000
+EUREKA_HOST=localhost:8761
+eureka.client.service-url.defaultZone=http://${EUREKA_HOST}/eureka
 eureka.client.register-with-eureka=false
 spring.cloud.gateway.discovery.locator.enabled=true
