fixed EUREKA_HOST for docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=gmdb-gateway-svc
 server.port=8000
-EUREKA_HOST=localhost:8761
+EUREKA_HOST=gmdb-discovery:8761
 eureka.client.service-url.defaultZone=http://${EUREKA_HOST}/eureka
 eureka.client.register-with-eureka=false
 spring.cloud.gateway.discovery.locator.enabled=true
